automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -37,5 +37,13 @@
         </div>
       </div>
     </div>
+  <script>
+    const div = document.querySelectorAll("div");
+    
+    function bubble(e){
+      console.log(this.firstChild.nodeValue.trim() + ' bubbled');
+    }
+    
+  </script>
   </body>
 </html>
