--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
     const divs = document.querySelectorAll("div");
     
     function bubble(e){
+      e.stopPropagation();
       console.log(this.firstChild.nodeValue.trim() + ' bubbled');
     }
     
